[QA-2207] Fix double scrollbars (#12504)

--- a/packages/harmony/src/components/scrollbar/Scrollbar.module.css
+++ b/packages/harmony/src/components/scrollbar/Scrollbar.module.css
@@ -48,6 +48,5 @@ only show the scrollbar for ~1s, then fade away if not scrolling. */
 }
 
 :global(.ps) {
-  overflow-y: auto !important;
   overscroll-behavior: contain;
 }
